add tests for ArrayStack